<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_attachment"
        android:alphabeticShortcut="n"
        android:title="@string/add_attachment_action"
        android:icon="?attr/iconActionAddAttachment"
        app:showAsAction="always"
    />
    <item
        android:id="@+id/send"
        android:alphabeticShortcut="s"
        android:title="@string/send_action"
        android:icon="?attr/iconActionSend"
        app:showAsAction="always"
    />
    <item
        android:id="@+id/add_from_contacts"
        android:alphabeticShortcut="a"
        android:title="@string/add_from_contacts"
    />
    <item
        android:id="@+id/save"
        android:alphabeticShortcut="d"
        android:title="@string/save_draft_action"
        android:icon="?attr/iconActionSave"
        />
    <item
        android:id="@+id/discard"
        android:alphabeticShortcut="q"
        android:title="@string/discard_action"
        android:icon="?attr/iconActionCancel"
    />
    <item
        android:id="@+id/read_receipt"
        android:alphabeticShortcut="r"
        android:title="@string/read_receipt"
        android:icon="?attr/iconActionRequestReadReceipt"
    />
    <item
        android:id="@+id/openpgp_encrypt_enable"
        android:alphabeticShortcut="c"
        android:title="@string/enable_encryption"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/openpgp_encrypt_disable"
        android:alphabeticShortcut="c"
        android:title="@string/disable_encryption"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/openpgp_sign_only"
        android:alphabeticShortcut="g"
        android:title="@string/enable_sign_only"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/openpgp_sign_only_disable"
        android:alphabeticShortcut="g"
        android:title="@string/disable_sign_only"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/openpgp_inline_enable"
        android:alphabeticShortcut="i"
        android:title="@string/enable_inline_pgp"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/openpgp_inline_disable"
        android:alphabeticShortcut="i"
        android:title="@string/disable_inline_pgp"
        app:showAsAction="never"
        />
</menu>
